--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Layout</title>
-    <link rel="stylesheet" href="demo.css">
+    <link rel="stylesheet" href="demo1.css">
 </head>
 
 <body>
