--- a/demo1.html
+++ b/demo1.html
@@ -28,8 +28,12 @@
             <img src="https://via.placeholder.com/300?text=Image+3" alt="3">
         </section>
     </main>
-    <footer>
-        <p>&copy; 2024 Responsive Website</p>
-    </footer>
+    <div class="footer-wrapper">
+
+        <footer class="footer">
+            <p>&copy; 2024 Responsive Website</p>
+        </footer>
+    </div>
 </body>
+
 </html>
