--- a/demo3.html
+++ b/demo3.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="demo3.css">
+    <title>Flex Website</title>
 </head>
 
 <body>
